--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root"> <ins> HAHAHA <ins> </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
