--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <body>
     <div id="root"></div>
+    <p>HIIIIIIIIIIIIIIIIIIIIIIIIIII</p>
     <script type="module" src="/dist/main.js"></script>
   </body>
 </html>
