--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <div id="root"></div>
     <h1 className="text-4xl sm:text-5xl md:text-6xl lg:text-7xl xl:text-8xl font-inter font-bold tracking-tight leading-[1.1] text-left pb-2 sm:pb-4"> Hello World</h1>
     <p>HIIIIIIIIIIIIIIIIIIIIIIIIIII</p>
-    <script type="module" src="/dist/main.js"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
